# LIRC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cat.lisp  expr_demo.lisp  harvard_check.lisp  hello_user_name.lisp  int64.lisp  prob1.lisp  sort.lisp  t_id.lisp  t_pal.lisp
golden/: cat.yaml  expr_demo.yaml  harvard_check.yaml  hello.yaml  hello_user_name.yaml  int64.yaml  prob1.yaml  sort.yaml
src/: ast_parser.ry  config.py  isa.py  tokenizer.py
src/assembler/: main.py  parser.py
src/emulator/: cu.py  datapath.py  elements.py  main.py  microcode.py
src/translator/: ast_parser.py  main.py  tokenizer.py  translator.py
tests/: expand_golden.py  run_chain.py  test_integration.py
